# CPSC538-Project-Submission

./: .gitignore  README.md  waveforms_workspace.dwf3work
Demo/: CMakeLists.txt  EDF_task_generator.c  EDF_task_generator.h  FreeRTOSConfig.h  main.c
FreeRTOS-Kernel/: CMakeLists.txt  SRP.c  queue.c  tasks.c
FreeRTOS-Kernel/include/: SRP.h  projdefs.h  task.h
